# protocentral-micropython-tla20xx

./: LICENSE.md  README.md  REQUIREMENTS.md  package.json  protocentral_tla20xx.py  protocentral_tla20xx_linux.py  pyproject.toml
.github/workflows/: publish.yml
examples/: tla20xx_4channel_scan.py  tla20xx_raspberrypi.py  tla20xx_simpletest.py
tests/: test_tla20xx.py
